dnl Process this file with autoconf to produce a configure script.
AC_INIT(vgrabbj.c)

# For automake
PACKAGE=vgrabbj
VERSION=0.6.3
AM_INIT_AUTOMAKE(vgrabbj,0.6.3)

prefix=/usr/local/

AC_ARG_PROGRAM

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
dnl Replace `main' with a function in -ljpeg:
AC_CHECK_LIB(jpeg, main)
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)
dnl Replace `main' with a function in -lpng:
AC_CHECK_LIB(png, main)
dnl Replace `main' with a function in -lttf:
AC_CHECK_LIB(ttf, main)
dnl Replace `main' with a function in -lz:
AC_CHECK_LIB(z, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h syslog.h unistd.h linux/videodev.h png.h jpeglib.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_STRFTIME

AC_OUTPUT(Makefile)
